# Notion-2-Obsidan

./: .gitignore  .pre-commit-config.yaml  METHODOLOGY.md  N2Omodule.py  README.md  pyproject.toml
knox/: N2O.py  cli.py
knox/model/base/: .datastore.py.swp  __init__.py  datastore.py  exceptions.py  link.py  page.py
knox/model/notion/: __init__.py  notion.py  notiondirstore.py  notionzipstore.py  page.py
knox/parser/base/: __init__.py  ast.py  parser.py
knox/parser/notion/: markdown_rules.py  markdown_tokens.py  markdownparser.py
knox/renderer/: markdown.py  renderer.py
tests/: conftest.py  test_cli.py
tests/assets/markdown/test_files/: base_markdown_test_page.md  notion_export_markdown_test_page.md
tests/assets/notion/minimal/: Getting Started 1a3c3f5c5ebe44c7805dedcec04872e6.md  Journal 2ea30c3413394b64b8233a4aa2caef0c.csv  Personal Home 1d296188a0364734868f6b19d9442da9.md  Quick Note d7aa5b5a275e43039451fa0269351046.md  Reading List 5d3ed53dffa14158b5a8956fff02e055.md  Short Test.md  Task List ab8c86d111fb4afe9a0590f0cfe6b98d.csv
tests/assets/notion/minimal/Getting Started 1a3c3f5c5ebe44c7805dedcec04872e6/: Example sub page 7838bb921d794ac8bc2948b4d9368b50.md
tests/assets/notion/minimal/Journal 2ea30c3413394b64b8233a4aa2caef0c/: Daily Entry a908ab6c0ec144a5b3fca8f64fa9b502.md  Daily reflection 77bc168e443841d79ac7fb55ea7e613c.md
tests/model/: conftest.py  test_notion.py
tests/model/base/: test_base.py
tests/model/test_notion_expected_results/: minimal_resources_list.txt  page1_link_list.txt
tests/renderer/: test_renderer.py
(+8 files in other folders)
